Fix minor error

--- a/notebooks/langchain/langchain-vector-store.ipynb
+++ b/notebooks/langchain/langchain-vector-store.ipynb
@@ -8,7 +8,7 @@
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/integrations/langchain/langchain-vector-store.ipynb)\n",
     "\n",
     "\n",
-    "This workbook shows example of similiarity search for a search query. First  we   split the documents into chunks using `langchain` and then index into elasticsearch through [`ElasticsearchStore.from_documents`](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents).\n"
+    "This workbook shows example of similiarity search for a search query and demonstrates filtering of metadata. First  we   split the documents into chunks using `langchain` and then index into elasticsearch through [`ElasticsearchStore.from_documents`](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents).\n"
    ]
   },
   {
@@ -152,8 +152,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Show results functions\n",
-    "We write a function to show the results of our query, Which would be used in our examples to display results."
+    "# Results functions\n",
+    "Next, we will create a small function to show the results of our query in human-readable outputs. This function would be used in our examples to display the results."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "source": [
     "## Querying the dataset with similarity_search\n",
     "\n",
-    "Now that we have indexed our sample data to elasticsearch, we will perform a similarity search on query - `How does the compensation work?`. By default return top `4` documents."
+    "Now that we have indexed our sample data to elasticsearch, we will perform a similarity search on query - `How does the compensation work?`. By default returns top `4` documents."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "metadata": {},
    "source": [
     "## Querying the dataset with filtering Metadata\n",
-    "We will now adding metadata filtering by Keyword at query time, to match `rolePermissions` as `manager`. "
+    "We will now add metadata filtering by Keyword at query time, to match `rolePermissions` as `manager`. "
    ]
   },
   {
