Add note about Elser and little clean ups

--- a/notebooks/langchain/langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/langchain-vector-store-using-elser.ipynb
@@ -8,7 +8,13 @@
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/integrations/langchain/langchain-vector-store-using-elser.ipynb)\n",
     "\n",
     "\n",
-    "This workbook demonstrates similiarity search using [SparseVectorRetrievalStrategy](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) (ELSER). First  we   split the documents into chunks using `langchain` and then index into elasticsearch through [`ElasticsearchStore.from_documents`](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents). Then, we filter the metadata in query. \n",
+    "This workbook demonstrates similiarity search using [SparseVectorRetrievalStrategy](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) (ELSER). First,  we  split the documents into chunks using `langchain` and then index into elasticsearch through [`ElasticsearchStore.from_documents`](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents). \n",
+    "\n",
+    "The [SparseVectorRetrievalStrategy](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) converts each document into tokens and would be stored in `vector` field with datatype `rank_features`. Hence, the inference is handled within elasticsearch.\n",
+    "\n",
+    "The `similarity_search` performs semantic search using `text_expansion` and sets the query.\n",
+    "\n",
+    "We will then see how to filter the metadata within query. \n",
     "\n",
     "\n"
    ]
@@ -32,7 +38,6 @@
     "# import modules\n",
     "from getpass import getpass\n",
     "from langchain.vectorstores import ElasticsearchStore\n",
-    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from urllib.request import urlopen\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "import json"
@@ -63,9 +68,6 @@
     "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
     "CLOUD_USERNAME = \"elastic\"\n",
     "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
-    "\n",
-    "# set OpenAI API key\n",
-    "OPENAI_API_KEY = getpass(\"OpenAI API key\")\n",
     "\n",
     "\n",
     "vector_store = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
