--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -7,7 +7,7 @@
         "id": "87773ce7"
       },
       "source": [
-        "# Elasticsearch quick start: embeddings, semantic search, and hybrid search\n",
+        "# Semantic search quick start\n",
         "\n",
         "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/00-quick-start.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
