--- a/notebooks/integrations/openai/openai-KNN-RAG.ipynb
+++ b/notebooks/integrations/openai/openai-KNN-RAG.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "from getpass import getpass\n",
     "from elasticsearch import Elasticsearch, helpers\n",
-    "import wget, zipfile, pandas as pd, json"
+    "import wget, zipfile, pandas as pd, json, openai"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
