Review: remove comments and modify complex qn

--- a/notebooks/langchain/langchain-self-query-retriever.ipynb
+++ b/notebooks/langchain/langchain-self-query-retriever.ipynb
@@ -28,10 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install packages\n",
     "!python3 -m pip install -qU lark elasticsearch langchain openai\n",
     "\n",
-    "# install modules\n",
     "from langchain.schema import Document\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from langchain.vectorstores import ElasticsearchStore\n",
@@ -110,18 +108,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get openAI api key \n",
     "OPENAI_API_KEY = getpass(\"OpenAI API Key:\")\n",
     "\n",
-    "# create openAI embedding \n",
     "embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "# get elasticsearch cloud id, username and password\n",
     "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
     "CLOUD_USERNAME = \"elastic\"\n",
     "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
     "\n",
-    "# create vector store\n",
     "vectorstore = ElasticsearchStore.from_documents(\n",
     "    docs, embeddings, index_name=\"elasticsearch-self-query-demo\", es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD\n",
     ")\n"
@@ -140,11 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Add details about metadata fields\n",
     "metadata_field_info = [\n",
     "    AttributeInfo(\n",
@@ -166,7 +159,7 @@
     "        name=\"rating\", description=\"A 1-10 rating for the movie\", type=\"float\"\n",
     "    ),\n",
     "]\n",
-    "# Add short description about document\n",
+    "\n",
     "document_content_description = \"Brief summary of a movie\"\n",
     "\n",
     "# Set up openAI llm with sampling temperature 0\n",
@@ -175,7 +168,7 @@
     "# instantiate retriever\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
     "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -191,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +203,7 @@
        " Document(page_content='A bunch of normal-sized women are supremely wholesome and some men pine after them', metadata={'year': 2019, 'director': 'Greta Gerwig', 'rating': 8.3})]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +242,7 @@
        "[Document(page_content='Three men walk into the Zone, three men walk out of the Zone', metadata={'year': 1979, 'rating': 9.9, 'director': 'Andrei Tarkovsky', 'genre': 'science fiction'})]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +308,7 @@
        " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,34 +326,34 @@
     "We will try some complex queries with filters and `1 limit`.\n",
     "\n",
     "\n",
-    "Query: `Show that one movie which was about dream and was released after the year 1992 but before 2005?`. \n"
+    "Query: `Show that one movie which was about dream and was released after the year 1992 but before 2007?`. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query='dream' filter=Operation(operator=<Operator.AND: 'and'>, arguments=[Comparison(comparator=<Comparator.GT: 'gt'>, attribute='year', value=1992), Comparison(comparator=<Comparator.LT: 'lt'>, attribute='year', value=2005)]) limit=1\n"
+      "query='dream' filter=Operation(operator=<Operator.AND: 'and'>, arguments=[Comparison(comparator=<Comparator.GT: 'gt'>, attribute='year', value=1992), Comparison(comparator=<Comparator.LT: 'lt'>, attribute='year', value=2007)]) limit=1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='Toys come alive and have a blast doing so', metadata={'year': 1995, 'genre': 'animated'})]"
+       "[Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "retriever.get_relevant_documents(\"Show that one movie which was about dream and was released after the year 1992 but before 2005?\")"
+    "retriever.get_relevant_documents(\"Show that one movie which was about dream and was released after the year 1992 but before 2007?\")"
    ]
   }
  ],
